src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__timestamp__cast_timestamp_to_date.snap
---
source: src/expr/src/scalar/func/impls/timestamp.rs
expression: "#[sqlfunc(\n    sqlname = \"timestamp_to_date\",\n    preserves_uniqueness = false,\n    inverse = to_unary!(super::CastDateToTimestamp(None)),\n    is_monotone = true\n)]\nfn cast_timestamp_to_date(\n    a: CheckedTimestamp<NaiveDateTime>,\n) -> Result<Date, EvalError> {\n    Ok(a.date().try_into()?)\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct CastTimestampToDate;
impl crate::func::EagerUnaryFunc for CastTimestampToDate {
    type Input<'a> = CheckedTimestamp<NaiveDateTime>;
    type Output<'a> = Result<Date, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        cast_timestamp_to_date(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn inverse(&self) -> Option<crate::UnaryFunc> {
        to_unary!(super::CastDateToTimestamp(None))
    }
    fn is_monotone(&self) -> bool {
        true
    }
    fn preserves_uniqueness(&self) -> bool {
        false
    }
}
impl std::fmt::Display for CastTimestampToDate {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("timestamp_to_date")
    }
}
fn cast_timestamp_to_date(
    a: CheckedTimestamp<NaiveDateTime>,
) -> Result<Date, EvalError> {
    Ok(a.date().try_into()?)
}
