src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__timestamp__cast_timestamp_tz_to_date.snap
---
source: src/expr/src/scalar/func/impls/timestamp.rs
expression: "#[sqlfunc(\n    sqlname = \"timestamp_with_time_zone_to_date\",\n    preserves_uniqueness = false,\n    inverse = to_unary!(super::CastDateToTimestampTz(None)),\n    is_monotone = true\n)]\nfn cast_timestamp_tz_to_date(\n    a: CheckedTimestamp<DateTime<Utc>>,\n) -> Result<Date, EvalError> {\n    Ok(a.naive_utc().date().try_into()?)\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct CastTimestampTzToDate;
impl crate::func::EagerUnaryFunc for CastTimestampTzToDate {
    type Input<'a> = CheckedTimestamp<DateTime<Utc>>;
    type Output<'a> = Result<Date, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        cast_timestamp_tz_to_date(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn inverse(&self) -> Option<crate::UnaryFunc> {
        to_unary!(super::CastDateToTimestampTz(None))
    }
    fn is_monotone(&self) -> bool {
        true
    }
    fn preserves_uniqueness(&self) -> bool {
        false
    }
}
impl std::fmt::Display for CastTimestampTzToDate {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("timestamp_with_time_zone_to_date")
    }
}
fn cast_timestamp_tz_to_date(
    a: CheckedTimestamp<DateTime<Utc>>,
) -> Result<Date, EvalError> {
    Ok(a.naive_utc().date().try_into()?)
}
