src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__timestamp__timezone_timestamp_binary.snap
---
source: src/expr/src/scalar/func/impls/timestamp.rs
expression: "#[sqlfunc(sqlname = \"timezonets\")]\nfn timezone_timestamp_binary(\n    tz: &str,\n    ts: CheckedTimestamp<NaiveDateTime>,\n) -> Result<CheckedTimestamp<DateTime<Utc>>, EvalError> {\n    let tz = parse_timezone(tz, TimezoneSpec::Posix)?;\n    timezone_timestamp(tz, ts.into())\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct TimezoneTimestampBinary;
impl crate::func::binary::EagerBinaryFunc for TimezoneTimestampBinary {
    type Input1<'a> = &'a str;
    type Input2<'a> = CheckedTimestamp<NaiveDateTime>;
    type Output<'a> = Result<CheckedTimestamp<DateTime<Utc>>, EvalError>;
    fn call<'a>(
        &self,
        a: Self::Input1<'a>,
        b: Self::Input2<'a>,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output<'a> {
        timezone_timestamp_binary(a, b)
    }
    fn output_type(
        &self,
        input_type_a: mz_repr::SqlColumnType,
        input_type_b: mz_repr::SqlColumnType,
    ) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        let is_null = nullable
            || (propagates_nulls && (input_type_a.nullable || input_type_b.nullable));
        output.nullable(is_null)
    }
}
impl std::fmt::Display for TimezoneTimestampBinary {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("timezonets")
    }
}
fn timezone_timestamp_binary(
    tz: &str,
    ts: CheckedTimestamp<NaiveDateTime>,
) -> Result<CheckedTimestamp<DateTime<Utc>>, EvalError> {
    let tz = parse_timezone(tz, TimezoneSpec::Posix)?;
    timezone_timestamp(tz, ts.into())
}
