src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__timestamp__timezone_timestamp_tz_binary.snap
---
source: src/expr/src/scalar/func/impls/timestamp.rs
expression: "#[sqlfunc(sqlname = \"timezonetstz\")]\nfn timezone_timestamp_tz_binary(\n    tz: &str,\n    tstz: CheckedTimestamp<DateTime<Utc>>,\n) -> Result<CheckedTimestamp<NaiveDateTime>, EvalError> {\n    let tz = parse_timezone(tz, TimezoneSpec::Posix)?;\n    Ok(timezone_timestamptz(tz, tstz.into())?.try_into()?)\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct TimezoneTimestampTzBinary;
impl crate::func::binary::EagerBinaryFunc for TimezoneTimestampTzBinary {
    type Input1<'a> = &'a str;
    type Input2<'a> = CheckedTimestamp<DateTime<Utc>>;
    type Output<'a> = Result<CheckedTimestamp<NaiveDateTime>, EvalError>;
    fn call<'a>(
        &self,
        a: Self::Input1<'a>,
        b: Self::Input2<'a>,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output<'a> {
        timezone_timestamp_tz_binary(a, b)
    }
    fn output_type(
        &self,
        input_type_a: mz_repr::SqlColumnType,
        input_type_b: mz_repr::SqlColumnType,
    ) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        output
            .nullable(
                nullable
                    || (propagates_nulls
                        && (input_type_a.nullable || input_type_b.nullable)),
            )
    }
}
impl std::fmt::Display for TimezoneTimestampTzBinary {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("timezonetstz")
    }
}
fn timezone_timestamp_tz_binary(
    tz: &str,
    tstz: CheckedTimestamp<DateTime<Utc>>,
) -> Result<CheckedTimestamp<NaiveDateTime>, EvalError> {
    let tz = parse_timezone(tz, TimezoneSpec::Posix)?;
    Ok(timezone_timestamptz(tz, tstz.into())?.try_into()?)
}
